@@ -26,3 +26,4 @@ pkg
 *.gem
 *.tgz
 doc/examples/c/affy
+biolib-*
